--- a/templates/index.html
+++ b/templates/index.html
@@ -61,6 +61,7 @@
                     <div class="model-dropdown-item"><input type="checkbox" id="model-metaclip2" value="metaclip2" checked><label for="model-metaclip2">MetaCLIP2</label></div>
                 </div>
             </div>
+            <button class="toolbar-btn" id="onlyMetaBtn" title="Toggle MetaCLIP2 Only Mode (Ctrl+Alt+K)"><div class="btn-hover-bg"></div><span><i class="fas fa-star"></i> OnlyMeta</span></button>
             <button class="toolbar-btn" id="objectFilterBtn" title="Object Filters (Ctrl+F)"><div class="btn-hover-bg"></div><span><i class="fas fa-shapes"></i> Filters</span></button>
             <button class="toolbar-btn" id="clusterBtn" title="Toggle Clustering (Ctrl+G)"><div class="btn-hover-bg"></div><span><i class="fas fa-object-group"></i> Cluster</span></button>
             <button class="toolbar-btn" id="historyBtn" title="Search History (Ctrl+Shift+H)"><div class="btn-hover-bg"></div><span><i class="fas fa-history"></i> History</span></button>            <button class="toolbar-btn" id="ambiguousBtn" title="Toggle Ambiguous Temporal Search (Ctrl+Shift+G)"><div class="btn-hover-bg"></div><span><i class="fas fa-random"></i> Ambiguous</span></button>
